authors-nodejs/k8s/istio-egress-cloudant.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cloudant
spec:
  hosts:
  - 37e183d2-64fa-4d17-961f-7d4dad874f2a-bluemix.cloudantnosqldb.appdomain.cloud
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloudant
spec:
  hosts:
  - 37e183d2-64fa-4d17-961f-7d4dad874f2a-bluemix.cloudantnosqldb.appdomain.cloud
  tls:
  - match:
    - port: 443
      sni_hosts:
      - 37e183d2-64fa-4d17-961f-7d4dad874f2a-bluemix.cloudantnosqldb.appdomain.cloud
    route:
    - destination:
        host: 37e183d2-64fa-4d17-961f-7d4dad874f2a-bluemix.cloudantnosqldb.appdomain.cloud
        port:
          number: 443
      weight: 100
